# katas

./: .gitignore  katas.code-workspace  package.json  tsconfig.json
cpp/: new-workspace
cpp/.template/: CMakeLists.txt
cpp/double-dispatch/: a.out  test.cpp  test2.cpp  timeings
cpp/entity-component-system/: CMakeLists.txt
cpp/entity-component-system/.clangd/index/: main.cpp.65073C582320125C.idx
cpp/entity-component-system/src/: main.cpp
cpp/simple-game/: CMakeLists.txt
cpp/simple-game/game/: CMakeLists.txt  game.cpp  game.fbs  memory_allocator.hpp  objects.hpp  player.hpp  primitives.hpp  render.hpp  save_allocator.cpp  save_allocator.hpp  simple_game.cpp  simple_game.hpp  software_renderer.hpp  static_allocator.cpp  static_allocator.hpp  utilities.hpp
cpp/simple-game/include/game/: game.hpp
cpp/simple-game/platform/qt5/: CMakeLists.txt  keyboard_filter.cpp  keyboard_filter.hpp  main.cpp  main_window.cpp  main_window.hpp
cpp/simple-game/platform/x11/: CMakeLists.txt  main.cpp
cpp/simple-game/src/: keyboard_filter.cpp  keyboard_filter.h  main.cpp  main_window.cpp  main_window.h
typescript/: new-workspace  package.json  test.yml
typescript/.templates/: package.json
